# Hatch-MCP-Server

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: semantic-release.yml
docs/articles/: index.md
docs/articles/appendices/: glossary.md
docs/articles/devs/architecture/: Overview.md
docs/articles/devs/contribution_guidelines/: CONTRIBUTING.md
docs/articles/users/: APIReference.md  CitationSystem.md  Examples.md  GettingStarted.md
hatch_mcp_server/: __init__.py  hatch_mcp.py
