[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hatch-mcp-server"
version = "0.2.0"
authors = [
  { name = "Hatch Team" },
]
description = "Wrapper for MCP servers to service Hatch-related apps."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

dependencies = [
    "mcp>=1.6.0",
]

[project.urls]
"Homepage" = "https://github.com/CrackingShells/Hatch-MCP-Server"
"Bug Tracker" = "https://github.com/CrackingShells/Hatch-MCP-Server/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]